--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/mishrasuman7/mern-estate#readme",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongos": "^0.0.0",
     "nodemon": "^3.1.10"
   }
 }
